correct overflow error detected in carousel style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ footer {
 
 #carousel {
     height: 100%;
-    overflow: scroll element;
+    overflow: scroll;
     scroll-snap-type: y mandatory;
     overflow-y: auto;
 }
